--- a/css/styles.css
+++ b/css/styles.css
@@ -691,6 +691,7 @@ img {
   min-height: 581px;
   left: 50%;
   top: 50%;
+  padding: 40px;
   transform: translate(-50%, -50%) scale(1);
 
   transition: transform var(--time) var(--cubic);
@@ -699,6 +700,9 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+.modal-close-icon{
+  fill:currentColor
 }
 
 .modal-button-close {
@@ -714,6 +718,110 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background: #ffffff;
+  color: var(--header-color);
+  transition: color var(--time) var(--cubic);
+cursor: pointer;
+}
+.modal-button-close:focus,
+.modal-button-close:hover
+ {
+  color: var(--accent-text-color);
+}
+
+/*форма модального окна*/
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+.modal-form-title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 12px;
+
+  color: var(--third-text-color);
+}
+.modal-form-field{
+  font-size: 12px;
+line-height: 1.16;
+letter-spacing: 0.01em;
+color: #757575;
+}
+.modal-form-input {
+  padding-left: 30px;
+color: var(--primary-title-color);
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.modal-form-block{
+  display: block;
+  position: relative;
+ color: var(--header-color);
+height: 40px;
+  margin-bottom: 10px;
+  margin-top: 4px;
+  
+}
+.modal-form-input:hover , 
+.modal-form-input:focus,
+.modal-form-massage:focus,
+.modal-form-massage:hover  {
+  border-color: var(--accent-text-color);
+  color: var(--accent-text-color);
+}
+.modal-form-icon {
+  display: block;
+  color: currentColor;
+  position: absolute;
+  top:50%;
+  left: 12px;
+  transform:translateY(-50%);
+}
+.modal-form-btn{
+
+  display: block; 
+  align-self: center;
+text-align: center;
+  border-radius: 4px;
+  border: none;
+  width: 200px;
+  height: 50px;
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--second-text-color);
+  background-color: var(--second-background-color);
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color var(--time) var(--cubic);
+}
+
+
+.modal-form-massage {
+  margin-top: 4px;
+  padding: 12px 16px;
+  width: 100%;
+  height: 120px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  cursor: pointer;
+}
+placeholder {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;-
+
+  color: rgba(117, 117, 117, 0.5);
 }
 /*форма*/
 
@@ -750,7 +858,9 @@ img {
   transition: background-color var(--time) var(--cubic);
 }
 .form-btn:hover,
-.form-btn:focus {
+.form-btn:focus,
+.modal-form-btn:focus,
+.modal-form-btn:hover {
   background-color: var(--hover-color);
 }
 .form-input {
@@ -763,6 +873,7 @@ img {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   margin-right: 12px;
+  cursor: pointer;
 }
 .form-footer-icon {
   fill: var(--second-text-color);
@@ -772,6 +883,8 @@ img {
   width: 24px;
   height: 24px;
 }
-.form-input:focus {
+.form-input:focus,
+.form-input:hover {
   color: var(--second-text-color);
+  border-color: var(--accent-text-color);
 }
