--- a/css/styles.css
+++ b/css/styles.css
@@ -701,8 +701,8 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
-.modal-close-icon{
-  fill:currentColor
+.modal-close-icon {
+  fill: currentColor;
 }
 
 .modal-button-close {
@@ -720,11 +720,10 @@ img {
   background: #ffffff;
   color: var(--header-color);
   transition: color var(--time) var(--cubic);
-cursor: pointer;
+  cursor: pointer;
 }
 .modal-button-close:focus,
-.modal-button-close:hover
- {
+.modal-button-close:hover {
   color: var(--accent-text-color);
 }
 
@@ -743,51 +742,58 @@ cursor: pointer;
 
   color: var(--third-text-color);
 }
-.modal-form-field{
+.modal-form-field {
   font-size: 12px;
-line-height: 1.16;
-letter-spacing: 0.01em;
-color: #757575;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
 }
 .modal-form-input {
-  padding-left: 30px;
-color: var(--primary-title-color);
+  padding-left: 42px;
+
+  color: var(--primary-title-color);
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   cursor: pointer;
+  transition: border-color var(--time) var(--cubic);
 }
-.modal-form-block{
+.modal-form-block {
   display: block;
   position: relative;
- color: var(--header-color);
-height: 40px;
+  color: var(--primary-title-color);
+  height: 40px;
   margin-bottom: 10px;
   margin-top: 4px;
-  
 }
-.modal-form-input:hover , 
+
+.modal-form-input:hover,
 .modal-form-input:focus,
 .modal-form-massage:focus,
-.modal-form-massage:hover  {
+.modal-form-massage:hover {
+  outline: none;
   border-color: var(--accent-text-color);
-  color: var(--accent-text-color);
+  fill: var(--accent-text-color);
+}
+.modal-form-input:hover + .modal-form-icon,
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-text-color);
 }
 .modal-form-icon {
   display: block;
-  color: currentColor;
+  color: var(--primary-title-color);
   position: absolute;
-  top:50%;
+  top: 50%;
   left: 12px;
-  transform:translateY(-50%);
+  transform: translateY(-50%);
+  transition: fill var(--time) var(--cubic);
 }
-.modal-form-btn{
-
-  display: block; 
+.modal-form-btn {
+  display: block;
   align-self: center;
-text-align: center;
+  text-align: center;
   border-radius: 4px;
   border: none;
   width: 200px;
@@ -798,15 +804,15 @@ text-align: center;
   line-height: 1.87;
   letter-spacing: 0.06em;
   color: var(--second-text-color);
-  background-color: var(--second-background-color);
+  background-color: var(--accent-text-color);
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: background-color var(--time) var(--cubic);
 }
 
-
 .modal-form-massage {
   margin-top: 4px;
+  margin-bottom: 20px;
   padding: 12px 16px;
   width: 100%;
   height: 120px;
@@ -815,13 +821,47 @@ text-align: center;
   box-sizing: border-box;
   border-radius: 4px;
   cursor: pointer;
+  transition: border-color var(--time) var(--cubic);
 }
-placeholder {
+/*Использую так потому, что добавила placeholder и в остальные поля */
+::placeholder {
   font-size: 12px;
   line-height: 1.16;
-  letter-spacing: 0.01em;-
-
+  letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
+}
+
+/*чекбокс*/
+.modal-form-checkbox-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+.modal-form-checkbox-link {
+  color: var(--accent-text-color);
+}
+.modal-form-checkbox-label::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 15px;
+  margin-right: 7px;
+  border: 1px solid #212121;
+  background-color: var(--main-background-color);
+  background-image: url(../images/svg/Vector.svg);
+  cursor: pointer;
+  transition: background-image var(--time) var(--cubic), border-color var(--time) var(--cubic);
+}
+.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
+  background-image: url(../images/svg/icon-check.svg);
+}
+.modal-form-checkbox:focus + .modal-form-checkbox-label::before {
+  border-color: var(--accent-text-color);
 }
 /*форма*/
 
