--- a/css/styles.css
+++ b/css/styles.css
@@ -854,6 +854,8 @@ img {
   border: 1px solid #212121;
   background-color: var(--main-background-color);
   background-image: url(../images/svg/Vector.svg);
+  border-image-repeat: no-repeat;
+  background-size: cover;
   cursor: pointer;
   transition: background-image var(--time) var(--cubic), border-color var(--time) var(--cubic);
 }
