--- a/css/styles.css
+++ b/css/styles.css
@@ -872,13 +872,12 @@ img {
 }
 
 .form-btn {
-  position: relative;
-  display: block;
-  padding: 10px 62px 10px 29px;
-  margin-left: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 4px;
   border: none;
-  width: 200px;
+  min-width: 200px;
   height: 50px;
   font-family: inherit;
   font-weight: bold;
@@ -897,12 +896,10 @@ img {
 .modal-form-btn:hover {
   background-color: var(--hover-color);
 }
-.form-label {
-  width: 100%;
-}
+
 .form-input {
   padding: 16px;
-  width: 100%;
+  width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: transparent;
@@ -913,9 +910,7 @@ img {
 }
 .form-footer-icon {
   fill: var(--second-text-color);
-  position: absolute;
-  top: 10px;
-  right: 28px;
+  margin-left: 10px;
   width: 24px;
   height: 24px;
 }
