--- a/css/styles.css
+++ b/css/styles.css
@@ -244,13 +244,14 @@ img {
 }
 
 .main-btn {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0 auto;
-  padding: 10px 32px;
+  height: 50px;
   min-width: 200px;
   border-radius: 4px;
   border: none;
-
   font-family: inherit;
   font-weight: bold;
   font-size: 16px;
