--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,16 @@
 :root {
   --header-color: #212121;
-  --second-header-color: #ffffff;
   --primary-text-color: #757575;
-  --second-text-color: #ffffff;
   --third-text-color: #212121;
-  --accent-text-color: #2196f3;
   --primary-title-color: #212121;
-  --second-title-color: #ffffff;
-  --main-background-color: #ffffff;
+  --accent-color: #2196f3;
+  --main-background-color-second-text-color: #ffffff;
   --first-background-color: #2f303a;
-  --second-background-color: #2196f3;
   --third-background-color: #f5f4fa;
-  --hover-color: #188ce8;
+  --hover-btn-color: #188ce8;
   --border-header-color: #ececec;
   --border-portfolio-color: #eeeeee;
   --icon-color: #757575;
-  --icon-background: #f5f4fa;
   --icon-color-second: #afb1b8;
   --cubic: cubic-bezier(0.4, 0, 0.2, 1);
   --time: 250ms;
@@ -28,7 +23,7 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 1.71;
-  background-color: var(--main-background-color);
+  background-color: var(--main-background-color-second-text-color);
 }
 .visually-hidden {
   position: absolute;
@@ -85,7 +80,7 @@ img {
   width: 100vw;
   margin-right: auto;
   margin-left: auto;
-  background-color: var(--main-background-color);
+  background-color: var(--main-background-color-second-text-color);
   z-index: 2;
   border-bottom: 1px solid var(--border-header-color);
   padding-top: 24px;
@@ -129,7 +124,7 @@ img {
 }
 
 .header-logo-part {
-  color: var(--accent-text-color);
+  color: var(--accent-color);
 }
 
 .menu {
@@ -152,16 +147,16 @@ img {
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: var(--accent-text-color);
+  background-color: var(--accent-color);
 }
 
 .menu-link:hover,
 .menu-link:focus {
-  color: var(--accent-text-color);
+  color: var(--accent-color);
 }
 
 .menu-link.current {
-  color: var(--accent-text-color);
+  color: var(--accent-color);
 }
 
 .header-mail,
@@ -172,10 +167,6 @@ img {
   transition: color var(--time) var(--cubic);
 }
 
-.menu-auto-list {
-  display: flex;
-  align-items: center;
-}
 .menu-auto-item {
   display: flex;
 }
@@ -202,7 +193,7 @@ img {
 .header-mail:hover,
 .header-tel:focus,
 .header-tel:hover {
-  color: var(--accent-text-color);
+  color: var(--accent-color);
 }
 /*герой*/
 
@@ -240,7 +231,7 @@ img {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--second-title-color);
+  color: var(--main-background-color-second-text-color);
 }
 
 .main-btn {
@@ -257,9 +248,9 @@ img {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  color: var(--second-text-color);
+  color: var(--main-background-color-second-text-color);
 
-  background-color: var(--second-background-color);
+  background-color: var(--accent-color);
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: background-color var(--time) var(--cubic);
@@ -267,7 +258,7 @@ img {
 
 .main-btn:hover,
 .main-btn:focus {
-  background-color: var(--hover-color);
+  background-color: var(--hover-btn-color);
 }
 /* наши преимущества*/
 .item-benefits {
@@ -302,7 +293,7 @@ img {
   margin-bottom: 30px;
   width: 100%;
   height: 120px;
-  background-color: var(--icon-background);
+  background-color: var(--third-background-color);
   border-radius: 4px;
 }
 .benefits-icons {
@@ -351,7 +342,7 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
-  color: var(--second-text-color);
+  color: var(--main-background-color-second-text-color);
 }
 /*наша команда*/
 .team-seaction {
@@ -373,7 +364,7 @@ img {
   width: 270px;
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: var(--main-background-color);
+  background-color: var(--main-background-color-second-text-color);
 }
 .team-title {
   margin-bottom: 10px;
@@ -381,7 +372,6 @@ img {
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
-  /* identical to box height */
   text-align: center;
   color: var(--primary-title-color);
 }
@@ -391,7 +381,6 @@ img {
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
-  /* identical to box height */
   text-align: center;
   color: var(--primary-text-color);
 }
@@ -420,8 +409,8 @@ img {
 }
 .cocial-link:hover,
 .cocial-link:focus {
-  color: var(--second-title-color);
-  background-color: var(--accent-text-color);
+  color: var(--main-background-color-second-text-color);
+  background-color: var(--accent-color);
 }
 .cocial-media-icon {
   width: 20px;
@@ -462,8 +451,8 @@ img {
 
 .btn-filters:hover,
 .btn-filters:focus {
-  color: var(--second-text-color);
-  background-color: var(--second-background-color);
+  color: var(--main-background-color-second-text-color);
+  background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -496,7 +485,6 @@ img {
   font-weight: bold;
   font-size: 18px;
   line-height: 2;
-  /* identical to box height, or 200% */
   letter-spacing: 0.06em;
   color: var(--primary-title-color);
 }
@@ -538,7 +526,7 @@ img {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-  color: var(--second-text-color);
+  color: var(--main-background-color-second-text-color);
 }
 .link-project-hover:focus .project-overly,
 .link-project-hover:hover .project-overly {
@@ -571,8 +559,8 @@ img {
 
 .our-clients-link:focus,
 .our-clients-link:hover {
-  color: var(--accent-text-color);
-  border-color: var(--accent-text-color);
+  color: var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 .our-clients-icon {
@@ -603,7 +591,7 @@ img {
 .footer-logo {
   display: block;
   margin-bottom: 20px;
-  color: var(--second-header-color);
+  color: var(--main-background-color-second-text-color);
 }
 
 .adress-list:not(:last-child) {
@@ -611,7 +599,7 @@ img {
 }
 
 .adress-area {
-  color: var(--second-text-color);
+  color: var(--main-background-color-second-text-color);
   transition: color var(--time) var(--cubic);
 }
 
@@ -627,15 +615,9 @@ img {
 .adress-mail:focus,
 .adress-tel:hover,
 .adress-tel:focus {
-  color: var(--accent-text-color);
+  color: var(--accent-color);
 }
 
-.footer-right {
-  width: 206px;
-}
-.footer-left {
-  width: 231px;
-}
 .footer-title {
   margin-bottom: 20px;
   font-weight: bold;
@@ -643,10 +625,10 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
-  color: var(--second-header-color);
+  color: var(--main-background-color-second-text-color);
 }
 .footer-icon {
-  fill: var(--second-header-color);
+  fill: var(--main-background-color-second-text-color);
 }
 .footer-cocial-item {
   border-radius: 50%;
@@ -676,7 +658,6 @@ img {
 
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.8);
-
   transition: transform var(--time) var(--cubic);
 }
 .modal {
@@ -686,10 +667,8 @@ img {
   top: 50%;
   padding: 40px;
   transform: translate(-50%, -50%) scale(1);
-
   transition: transform var(--time) var(--cubic);
-
-  background: var(--second-text-color);
+  background: var(--main-background-color-second-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -710,14 +689,14 @@ img {
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  background: #ffffff;
+  background: var(--main-background-color-second-text-color);
   color: var(--header-color);
   transition: color var(--time) var(--cubic);
   cursor: pointer;
 }
 .modal-button-close:focus,
 .modal-button-close:hover {
-  color: var(--accent-text-color);
+  color: var(--accent-color);
 }
 
 /*форма модального окна*/
@@ -770,11 +749,11 @@ img {
 .modal-form-massage:focus,
 .modal-form-massage:hover {
   outline: none;
-  border-color: var(--accent-text-color);
+  border-color: var(--accent-color);
 }
 .modal-form-input:hover + .modal-form-icon,
 .modal-form-input:focus + .modal-form-icon {
-  fill: var(--accent-text-color);
+  fill: var(--accent-color);
 }
 .modal-form-icon {
   display: block;
@@ -798,8 +777,8 @@ img {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  color: var(--second-text-color);
-  background-color: var(--accent-text-color);
+  color: var(--main-background-color-second-text-color);
+  background-color: var(--accent-color);
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: background-color var(--time) var(--cubic);
@@ -837,7 +816,7 @@ img {
   color: var(--primary-text-color);
 }
 .modal-form-checkbox-link {
-  color: var(--accent-text-color);
+  color: var(--accent-color);
 }
 .modal-form-checkbox-label::before {
   content: "";
@@ -845,9 +824,9 @@ img {
   width: 16px;
   height: 15px;
   margin-right: 7px;
-  border: 1px solid #212121;
+  border: 1px solid var(--third-text-color);
   border-radius: 4px;
-  background-color: var(--main-background-color);
+  background-color: var(--main-background-color-second-text-color);
   background-image: url(../images/svg/Vector.svg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -859,18 +838,13 @@ img {
   background-image: url(../images/svg/icon-check.svg);
 }
 .modal-form-checkbox:focus + .modal-form-checkbox-label::before {
-  border-color: var(--accent-text-color);
+  border-color: var(--accent-color);
 }
 /*форма*/
 
-.form-footer-block {
-  width: 570px;
-}
 .form-footer {
   display: flex;
-  width: 100%;
-  justify-content: space-between;
-}
+Ї}
 
 .form-btn {
   display: flex;
@@ -879,14 +853,13 @@ img {
   border-radius: 4px;
   border: none;
   min-width: 200px;
-  height: 50px;
   font-family: inherit;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  color: var(--second-text-color);
-  background-color: var(--second-background-color);
+  color: var(--main-background-color-second-text-color);
+  background-color: var(--accent-color);
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: background-color var(--time) var(--cubic);
@@ -895,13 +868,13 @@ img {
 .form-btn:focus,
 .modal-form-btn:focus,
 .modal-form-btn:hover {
-  background-color: var(--hover-color);
+  background-color: var(--hover-btn-color);
 }
 
 .form-input {
   padding: 16px;
-  width: 358px;
-  height: 50px;
+  min-width: 358px;
+  margin-right: 12px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: transparent;
   box-sizing: border-box;
@@ -910,13 +883,13 @@ img {
   cursor: pointer;
 }
 .form-footer-icon {
-  fill: var(--second-text-color);
+  fill: var(--main-background-color-second-text-color);
   margin-left: 10px;
   width: 24px;
   height: 24px;
 }
 .form-input:focus,
 .form-input:hover {
-  color: var(--second-text-color);
-  border-color: var(--accent-text-color);
+  color: var(--main-background-color-second-text-color);
+  border-color: var(--accent-color);
 }
