--- a/css/styles.css
+++ b/css/styles.css
@@ -437,7 +437,6 @@ img {
   padding: 6px 22px;
   border-radius: 4px;
   border: none;
-  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -765,14 +764,14 @@ img {
   transition: fill var(--time) var(--cubic);
 }
 .modal-form-btn {
-  display: block;
   align-self: center;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 4px;
   border: none;
-  width: 200px;
-  height: 50px;
-  font-family: inherit;
+  min-width: 200px;
+  min-height: 50px;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
@@ -780,7 +779,7 @@ img {
   color: var(--main-background-color-second-text-color);
   background-color: var(--accent-color);
   cursor: pointer;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
   transition: background-color var(--time) var(--cubic);
 }
 
@@ -853,7 +852,6 @@ img {
   border-radius: 4px;
   border: none;
   min-width: 200px;
-  font-family: inherit;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
