--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,6 @@
 :root {
-  --header-color: #212121;
-  --primary-text-color: #757575;
-  --third-text-color: #212121;
-  --primary-title-color: #212121;
+  --header-primary-title-color: #212121;
+  --primary-text-icon-color: #757575;
   --accent-color: #2196f3;
   --main-background-color-second-text-color: #ffffff;
   --first-background-color: #2f303a;
@@ -10,7 +8,6 @@
   --hover-btn-color: #188ce8;
   --border-header-color: #ececec;
   --border-portfolio-color: #eeeeee;
-  --icon-color: #757575;
   --icon-color-second: #afb1b8;
   --cubic: cubic-bezier(0.4, 0, 0.2, 1);
   --time: 250ms;
@@ -61,6 +58,7 @@ img {
   text-decoration: none;
 }
 /*общий контейнер*/
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -74,7 +72,7 @@ img {
 }
 
 /*шапка*/
-.page-header {
+.header {
   position: fixed;
   top: 0;
   width: 100vw;
@@ -86,44 +84,28 @@ img {
   padding-top: 24px;
   padding-bottom: 25px;
 }
-.menu-list {
-  display: flex;
-}
-.menu-item:not(:last-child) {
-  margin-right: 50px;
-}
-.header-nav {
-  display: flex;
-  align-items: center;
-}
-
-.menu-auto-list {
-  display: flex;
-  margin-left: auto;
-}
-.menu-auto-item:not(:last-child) {
-  margin-right: 50px;
-}
 .header-content {
   display: flex;
   align-items: center;
 }
-.header-logo {
+.nav {
+  display: flex;
+  align-items: center;
+}
+
+.header__logo {
   margin-right: 93px;
 }
-.header-logo,
-.footer-logo {
+.logo {
   font-family: Raleway;
   font-weight: bold;
   font-size: 26px;
   line-height: 1.19;
-
   letter-spacing: 0.03em;
-
-  color: var(--header-color);
+  color: var(--header-primary-title-color);
 }
 
-.header-logo-part {
+.logo__part {
   color: var(--accent-color);
 }
 
@@ -132,14 +114,28 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
+.nav__menu-list {
+  display: flex;
+}
+.nav__menu-item:not(:last-child) {
+  margin-right: 50px;
+}
 
-.menu-link {
-  color: var(--header-color);
+.header__contact-list {
+  display: flex;
+  margin-left: auto;
+}
+.header__contact-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.nav__menu-link {
+  color: var(--header-primary-title-color);
   position: relative;
   transition: color var(--time) var(--cubic);
   padding-bottom: 32px;
 }
-.menu-link.current::after {
+.nav__menu-link.current::after {
   position: absolute;
   bottom: 0;
   display: block;
@@ -150,29 +146,29 @@ img {
   background-color: var(--accent-color);
 }
 
-.menu-link:hover,
-.menu-link:focus {
+.nav__menu-link:hover,
+.nav__menu-link:focus {
   color: var(--accent-color);
 }
 
-.menu-link.current {
+.nav__menu-link.current {
   color: var(--accent-color);
 }
 
-.header-mail,
-.header-tel {
+.header__mail,
+.header__tel {
   display: flex;
   align-items: center;
-  color: var(--primary-text-color);
+  color: var(--primary-text-icon-color);
   transition: color var(--time) var(--cubic);
 }
 
-.menu-auto-item {
+.header__contact-item {
   display: flex;
 }
 .icon {
   margin-right: 10px;
-  fill: var(--icon-color);
+  fill: var(--primary-text-icon-color);
 }
 
 .i-envelope {
@@ -185,16 +181,14 @@ img {
   width: 10px;
   fill: currentColor;
 }
-.header-icon-hover {
-  display: block;
-}
 
-.header-mail:focus,
-.header-mail:hover,
-.header-tel:focus,
-.header-tel:hover {
+.header__mail:focus,
+.header__mail:hover,
+.header__tel:focus,
+.header__tel:hover {
   color: var(--accent-color);
 }
+
 /*герой*/
 
 .section-hero {
@@ -275,12 +269,12 @@ img {
   text-transform: uppercase;
   letter-spacing: 0.03em;
 
-  color: var(--primary-title-color);
+  color: var(--header-primary-title-color);
 }
 
 .text-benefits {
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: var(--primary-text-icon-color);
 }
 .benefits-block {
   display: flex;
@@ -369,7 +363,7 @@ img {
   line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
-  color: var(--primary-title-color);
+  color: var(--header-primary-title-color);
 }
 
 .team-text {
@@ -378,7 +372,7 @@ img {
   line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
-  color: var(--primary-text-color);
+  color: var(--primary-text-icon-color);
 }
 .cocial-media {
   display: flex;
@@ -438,7 +432,7 @@ img {
   line-height: 1.62;
   letter-spacing: 0.03em;
   text-align: center;
-  color: var(--third-text-color);
+  color: var(--header-primary-title-color);
   cursor: pointer;
   transition: background-color var(--time) var(--cubic), color var(--time) var(--cubic),
     box-shadow var(--time) var(--cubic);
@@ -481,7 +475,7 @@ img {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  color: var(--primary-title-color);
+  color: var(--header-primary-title-color);
 }
 
 .project-description {
@@ -494,7 +488,7 @@ img {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: var(--primary-text-icon-color);
 }
 
 .project-block {
@@ -685,7 +679,7 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background: var(--main-background-color-second-text-color);
-  color: var(--header-color);
+  color: var(--header-primary-title-color);
   transition: color var(--time) var(--cubic);
   cursor: pointer;
 }
@@ -707,14 +701,14 @@ img {
   letter-spacing: 0.03em;
   margin-bottom: 12px;
 
-  color: var(--third-text-color);
+  color: var(--header-primary-title-color);
 }
 .modal-form-field {
   margin-bottom: 10px;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
-  color: var(--primary-text-color);
+  color: var(--primary-text-icon-color);
 }
 .margine-massage {
   margin-bottom: 20px;
@@ -722,7 +716,7 @@ img {
 .modal-form-input {
   padding-left: 42px;
 
-  color: var(--primary-title-color);
+  color: var(--header-primary-title-color);
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -734,7 +728,7 @@ img {
 .modal-form-block {
   display: block;
   position: relative;
-  color: var(--primary-title-color);
+  color: var(--header-primary-title-color);
   height: 40px;
   margin-top: 4px;
 }
@@ -752,7 +746,7 @@ img {
 }
 .modal-form-icon {
   display: block;
-  color: var(--primary-title-color);
+  color: var(--header-primary-title-color);
   position: absolute;
   top: 50%;
   left: 12px;
@@ -808,7 +802,7 @@ img {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: var(--primary-text-icon-color);
 }
 .modal-form-checkbox-link {
   color: var(--accent-color);
@@ -819,7 +813,7 @@ img {
   width: 16px;
   height: 15px;
   margin-right: 7px;
-  border: 1px solid var(--third-text-color);
+  border: 1px solid var(--header-primary-title-color);
   border-radius: 4px;
   background-color: var(--main-background-color-second-text-color);
   background-image: url(../images/svg/Vector.svg);
